@@ -1453,23 +1453,19 @@ SEQAN_CHECKPOINT
 /**
 .Function.resize:
 ..cat:Containers
-..summary:Changes the length.
-..signature:Size resize(object, new_length [, resize_tag])
+..summary:Resizes a container. If the new length exceeds the old length the new elements are filled with copies of $value$.
+..signature:Size resize(object, newLength [value], [resizeTag])
 ..param.object: A container.
 ...type:Class.String
-..param.new_length: The new length $object$ will get.
-..param.resize_tag: Specifies the strategy that is applied if the capacity of $object$ is less than $new_length$. (optional)
+..param.newLength: The new length $object$ will get.
+..param.value: Value that is copied if new items are created in $object$.
+...remarks:If the $value$ argument is omitted, the items are not initialized.
+..param.resizeTag: Specifies the strategy that is applied if the capacity of $object$ is less than $newLength$. (optional)
 ...type:Tag.Overflow Strategy
 ...default:Specified by @Metafunction.DefaultOverflowExplicit@.
 ..returns:The new length $length(object)$.
 ...metafunction:Metafunction.Size
 ..remarks:This function can be used both for expanding and for shrinking $object$.
-...text:
-If $new_length$ is too large for $object$ (i.e. the @Function.capacity@ of $object$ is too small), then $object$ is
-expanded as far as possible. The resulting length
-of $object$ could be less than $new_length$, depending on the type of $object$ and the available storage.
-If $new_length$ is larger than $length(object)$, this function will not initialize the newly allocated elements by
-calling any constructor. To resize and initialize the new elements, use @Function.fill@ instead.
 ..see:Function.length
 ..see:Function.reserve
 ..include:seqan/sequence.h
@@ -1487,33 +1483,6 @@ SEQAN_CHECKPOINT
 //////////////////////////////////////////////////////////////////////////////
 // resize with copy-constructed values (former fill)
 //////////////////////////////////////////////////////////////////////////////
-
-/**
-.Function.resize:
-..cat:Containers
-..summary:Resizes a container. If the new length exceeds the old length the new elements are filled.
-..signature:Size resize(object, new_length, value [, resize_tag])
-..param.object: A container.
-...type:Class.String
-..param.new_length: The new length $object$ will get.
-..param.value: Value that is copied if new items are created in $object$.
-...remarks:If the $value$ argument is omitted, the default constructor is used to create
-new items in $object$.
-..param.resize_tag: Specifies the strategy that is applied if the capacity of $object$ is less than $new_length$. (optional)
-...type:Tag.Overflow Strategy
-...default:Specified by @Metafunction.DefaultOverflowExplicit@.
-..returns:The new length $length(object)$.
-...metafunction:Metafunction.Size
-..remarks:This function can be used both for expanding and for shrinking $object$.
-...text:
-	If $new_length$ is too large for $object$ (i.e. the @Function.capacity@ of $object$ is too small), then $object$ is
-	expanded as far as possible. The resulting length
-	of $object$ could be less than $new_length$, depending on the type of $object$ and the available storage.
-..see:Function.length
-..see:Function.reserve
-..see:Function.resize
-..include:seqan/sequence.h
-*/
 
 template <typename T, typename TSize, typename TValue>
 inline typename Size<T>::Type  
